assets/styles/voting.scss
/* ... */
.conspiracy {
  position: absolute;
  width: 46vw;
  left: -250px;
}

.plank-background {
  &::before {
    background-image: url("/2024images/planks-seamless.png");
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0px;
    z-index: -1;
    left: 0px;
    transform: rotate(1deg) scaleY(1.5) scaleX(1.1);
    filter: brightness(0.7) saturate(0.6);
    content: "";
  }

  &::after {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    box-shadow: inset 0 0 15px rgb(11, 9, 9);
    content: "";
  }

  .plank-inner-border {
    padding: 7px;
    height: 100%;

    &::after {
      border: 2px solid rgba(149, 149, 147, 0.75);
      mix-blend-mode: color-dodge;
      height: 100%;
      width: 100%;
      content: "";
      display: block;
    }
  }

  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  z-index: -1;
  overflow: clip;
}

.poster-background {
  background-size: 100% 100%;
  background-image: url("/2024images/paper2.jpg");
  -webkit-mask-image: url(/2024images/paper-edge-mask.png);
  -webkit-mask-size: 100% 100%;
  mask-image: url(/2024images/paper-edge-mask.png);
  mask-size: 100% 100%;
  padding: 30px;
  padding-top: 60px;
  box-shadow: inset 0px 0px 40px #44321a;
}

/* Award` Header (including left/right navigation buttons) */
.award-header {
  display: flex;
  justify-content: center;
  text-align: center;
  position: relative;
  max-width: 1100px;
  align-items: center;
  margin: 0 auto 20px;
  font-family: 'Young Heart', sans-serif;
  text-transform: capitalize;

  //background-image: url(/2020images/tape.png);
  //background-size: 790px;
  //background-position: center top;
  //background-repeat: no-repeat;

  @media screen and (max-width: 1000px) {
    flex-wrap: wrap;
    column-gap: 10px;
  }

  .award-name-container {
    //background: #fff;
    margin: 0 12px;
    padding: 12px 8px;
    max-width: 800px;

    color: rgba(0, 0, 0, 0.8);

    //-webkit-mask-image: url(/2022images/mask.png);
    //-webkit-mask-size: cover;

    flex-grow: 1;
    order: 2;

    @media screen and (max-width: 1000px) {
      width: 100%;
      order: 0;
    }
  }

  .award-name-container.oneLine .awardName {
    margin-top: -5px;
  }

  .award-name {
    font-size: 4.7em;
    line-height: 100%;
    margin-top: 10px;

    /*
    text-shadow:
            1px -1px #4EA24A,
            2px -2px #4EA24A,
            3px -3px #4EA24A,
            -1px 1px #DA505F,
            -2px 2px #4EA24A,
            -3px 3px #4EA24A,
            1px 1px #DA505F,
            2px 2px #061019,
            3px 3px #061019,
            -4px 4px #061019;
    */
    //5px 5px #4EA24A,
    //6px 6px #E5E37C,
    //7px 7px #061019,
    //-8px 8px #467B81,
    //-9px 9px #467B81,
    //-10px 10px #467B81,
    //11px 11px #E5E37C,
    //12px 12px #E5E37C,
    //-13px 13px #AB1119,
    //-14px 14px #AB1119,
    //-15px 15px #AB1119;


    @media screen and (max-width: 800px) {
      font-size: 3em;
    }
  }

  .award-subtitle {
    font-size: 1.8em;

    /*
    color: #0EBF8C;

    text-shadow:
            1px 1px #DA505F,
            2px 2px #061019,
            3px 3px #061019,
            -4px 4px #061019;
    */
  }

  .navigation {
    width: 140px;
    height: 98px;
    cursor: pointer;
    display: block;
    background-size: contain;
    background-repeat: no-repeat;
    flex-shrink: 0;

    &:hover {
      transform: translateY(3px);
    }

    &.left {
      background-image: url("/2024images/revolver-sketch.png");
      order: 1;
    }

    &.right {
      background-image: url("/2024images/revolver-sketch.png");
      order: 3;
      transform: scaleX(-1);

      &:hover {
        transform:translateY(3px) scaleX(-1) ;
      }
    }
  }
}

.awards-list {
  text-align: left;
  padding: 40px 70px;


  .your-votes {
    font-family: "Handwritten", serif;
    color: rgba(180, 80, 22, 0.8);
    mix-blend-mode: color-burn;
    font-size: 67px;

    .votes-left {
      float: right;
      width: 0px;
      rotate: 20deg;
      position: relative;
      right: 40px;
      line-height: 1;
      font-size: 0.8em;
    }
  }

  h2 {
    font-weight: bold;
    font-size: 24px;
    margin-bottom: 10px;
  }

  .awards {
    font-family: "Handwritten", sans-serif;
    column-count: 2;
    list-style: none;
    padding-left: 10px;
    font-size: 22px;
    line-height: 1;

    li {
      padding-bottom: 8px;
    }

    //position: relative;
    //display: grid;
    //grid-template-columns: repeat(2, 1fr);
    //column-gap: 10px;
    //
    @media screen and (max-width: 700px) {
      //grid-template-columns: 1fr;
      column-count: 1;
    }
  }

  .award {
    color: white;
    text-shadow: 0 0 10px rgba(0,0,0,0.7), 0 0 6px rgba(180,80,0, 9.5);
    text-decoration: none;

    &.complete {
      text-decoration: line-through;
    }

    &.active {
      color: #fdb305;
    }
  }

  .award-name {
    font-weight: bold;
  }

  .award-subtitle {
    text-decoration: none;
    //font-size: 0.8em;
    padding: 0;
    margin: 0;
    display: inline;
  }
}

.your-votes {
  color: white;
  text-align: center;
  font-size: 40px;

  @media (max-width: 768px) {
    font-size: 30px;
  }
}

#submitReminder {
  font-family: "Young Heart", serif;
  color: rgba(180, 80, 22, 0.8);
  mix-blend-mode: color-burn;
  font-size: 4em;
}
// END NEW SCSS


/* Assorted page elements */
.meme {
  width: 160px;
  height: 600px;
  margin-top: 5px;
  /*position: absolute;*/
  /*top: 250px;*/
}

.leftMeme {
  margin-left: 10px;
}

.rightMeme {
  margin-right: 10px;
}

#todd img {
  max-width: 100%;
}

/*#todd .modal-dialog {*/
/*width: 602px;*/
/*}*/

#todd .modal-header {
  background: transparent;
  padding: 3px;
  border: none;
}

#todd .close {
  color: white;
  text-shadow: none;
  opacity: 1;
}

#todd .modal-body {
  padding: 0;
  background: #262626;
  border: 1px solid #4d4b49;
}
/* ... */

